--- a/testWordsAPI.html
+++ b/testWordsAPI.html
@@ -8,11 +8,12 @@
         <style>
           .wordsContainer {
                 margin:auto;
+                margin-left: 8px;
                 max-width: 1600px;
                 width:100%;
                 display: grid;
                 grid-gap: 1em;
-                grid-template-columns: repeat(auto-fill, 200px);
+                grid-template-columns: repeat(auto-fill, 160px);
             }
             .link {
                 cursor: pointer;
@@ -21,6 +22,7 @@
                 margin:auto;
                 max-width: 1600px;
             }
+  
         </style>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
@@ -95,7 +97,7 @@
             })
             webAPI_GET();
         })
-        let limit = 200;
+        let limit = 60;
         let offset = 0;
         let currentLetter = "";
 
@@ -115,7 +117,7 @@
         }
 
         function webAPI_GET() {
-            let queryString = "?limit="+ limit + "&offset=" + offset;
+            let queryString = "?limit="+ limit + "&offset=" + offset + "&sort=word";
             if (currentLetter != "*")
                 queryString += "&word=" + currentLetter + "*";
             $('#words').empty();
