--- a/testWordsAPI.html
+++ b/testWordsAPI.html
@@ -122,7 +122,7 @@
                 queryString += "&word=" + currentLetter + "*";
             $('#words').empty();
             $.ajax({
-                url: "http://localhost:5000/api/words" + queryString,
+                url: "https://pushy-observant-case.glitch.me/api/words" + queryString,
                 type: 'GET',
                 contentType:'text/plain',
                 data:{},
