--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -11,5 +11,8 @@
     <img src="./images/home-icon.png" alt="" class="icon">
     <h1>Home page</h1>
     <hr>
+    <script>
+        console.log("index");
+    </script>
 </body>
 </html>
